# rich-table-builder

./: .gitignore  .windsurfrules  README.md  pyproject.toml  richtablebuilder.py
.github/workflows/: tests.yml
tests/: test_examples.py
