[project]
name = "rich-table-builder"
version = "0.1.0"
description = "A declarative API for building beautiful tables with rich"
authors = [
    {name = "Jerome Boisvert-Chouinard",email = "github@jbchouinard.net"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals"
]
dependencies = [
    "rich (>=13.9.4,<14.0.0)"
]

[project.urls]
Homepage = "https://github.com/jbchouinard/rich-table-builder"
Documentation = "https://github.com/jbchouinard/rich-table-builder#readme"
Repository = "https://github.com/jbchouinard/rich-table-builder"
Issues = "https://github.com/jbchouinard/rich-table-builder/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "richtablebuilder.py"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.9.10"
pudb = "^2024.1.3"

[tool.basedpyright]
reportExplicitAny = false
reportAny = false
reportImplicitOverride = true
reportPrivateUsage = false
reportUnnecessaryIsInstance = false

[tool.ruff]
target-version = "py310"
line-length = 100
# Enable auto-fixing
fix = true
# Enable automatic sorting of imports
unsafe-fixes = false

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "W"]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "dist",
]

[tool.ruff.lint.isort]
known-first-party = ["richtablebuilder"]

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
addopts = "--doctest-modules"
